# CPP-Simple-Socket-Server

SOCKET_CLIENT/: CMakeLists.txt
SOCKET_CLIENT/src/: main.cpp
SOCKET_SERVER/: CMakeLists.txt
SOCKET_SERVER/src/: main.cpp
